[gd_scene load_steps=8 format=3 uid="uid://bu36u7heeikt1"]

[ext_resource type="PackedScene" uid="uid://civnl8y32q1la" path="res://assets/scenes/gameplay/dialogue-box.tscn" id="1_ieblf"]
[ext_resource type="Script" path="res://scenes/demos/dialogue/player.gd" id="2_32wso"]
[ext_resource type="LabelSettings" uid="uid://b8jccqmt5m22p" path="res://assets/scenes/demos/dialogue/text-font-example.tres" id="4_70lgp"]
[ext_resource type="LabelSettings" uid="uid://cn1kj6c4x1gfw" path="res://assets/scenes/demos/dialogue/text-font-example2.tres" id="5_vb8j4"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6deuh"]
load_path = "res://.godot/imported/sample_player.png-9b17891c7ebe44c7f46101f8b5cae296.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4qjp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b33nc"]
size = Vector2(186, 91)

[node name="Node2D" type="Node2D"]
metadata/_edit_vertical_guides_ = []

[node name="CanvasLayer" parent="." instance=ExtResource("1_ieblf")]

[node name="player" type="CharacterBody2D" parent="."]
scale = Vector2(0.994953, 0.950902)
script = ExtResource("2_32wso")

[node name="Sprite2D" type="Sprite2D" parent="player"]
texture = SubResource("CompressedTexture2D_6deuh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
scale = Vector2(10, 14)
shape = SubResource("RectangleShape2D_a4qjp")

[node name="Camera2D" type="Camera2D" parent="player"]
scale = Vector2(1.00507e-05, 1.05163e-05)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="BoxContainer" type="BoxContainer" parent="Control"]
layout_mode = 0
offset_left = -576.0
offset_top = -322.0
offset_right = -250.0
offset_bottom = -218.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/BoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/BoxContainer/VBoxContainer"]
layout_mode = 2
text = "Mode: "
label_settings = ExtResource("4_70lgp")

[node name="Label" type="Label" parent="Control"]
layout_mode = 2
offset_left = 288.0
offset_top = -66.0
offset_right = 412.0
offset_bottom = -11.0
text = "point1"
label_settings = ExtResource("5_vb8j4")

[node name="Label3" type="Label" parent="Control"]
layout_mode = 2
offset_left = -486.0
offset_top = 172.0
offset_right = -362.0
offset_bottom = 227.0
text = "point3"
label_settings = ExtResource("5_vb8j4")

[node name="Area2D" type="Area2D" parent="Control"]
position = Vector2(311, 222)
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Area2D"]
position = Vector2(17, 4.5)
shape = SubResource("RectangleShape2D_b33nc")

[node name="Label2" type="Label" parent="Control/Area2D"]
z_index = -3
offset_left = -46.0
offset_top = -30.0
offset_right = 78.0
offset_bottom = 25.0
text = "point2"
label_settings = ExtResource("5_vb8j4")

[connection signal="endDialogue" from="player" to="CanvasLayer" method="_on_player_end_dialogue"]
[connection signal="triggerDialogue" from="player" to="CanvasLayer" method="_on_player_trigger_dialogue"]
[connection signal="body_entered" from="Control/Area2D" to="player" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Control/Area2D" to="player" method="_on_area_2d_body_exited"]
